--- a/CNLCI/Views/Shared/_Layout.cshtml
+++ b/CNLCI/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="~/Style/desing.css">
-    <title>@ViewBag.Title - Mi aplicación ASP.NET</title>
+    <title>@ViewBag.Title CONALEP</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
@@ -17,7 +17,7 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm is-success" >
         <div class="container">
 
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
@@ -26,7 +26,7 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
 
-                @Html.Partial("_LoginPartial")
+               @Html.Partial("_LoginPartial")
             </div>
 
         </div>
