--- a/CNLCI/Views/Shared/_LoginPartial.cshtml
+++ b/CNLCI/Views/Shared/_LoginPartial.cshtml
@@ -1,15 +1,17 @@
 ﻿@if (Request.IsAuthenticated)
 {
     <text>
+
         <ul class="navbar-nav flex-grow-1">
-            <li class="nav-link"><ion-icon name="reader-outline"></ion-icon></li>
-            <li>@Html.ActionLink("Justificante", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-            <li class="nav-link"><ion-icon name="id-card-outline"></ion-icon></li>
-            <li>@Html.ActionLink("Pase de salida", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            <li class="nav-link" style="color:white;"><ion-icon name="reader-outline"></ion-icon></li>
+            <li style="color:white;">@Html.ActionLink("Justificante", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            <li class="nav-link" style="color:white;"><ion-icon name="id-card-outline"></ion-icon></li>
+            <li style="color:white;">@Html.ActionLink("Pase de salida", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            <li class="nav-link" style="color:white;"> <ion-icon name="podium-outline"></ion-icon></li>
             <li>
                 <div class="nav-item dropdown " style="position:relative">
                     <a class="nav-link dropdown-toggle" href="#" id="reportes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <ion-icon name="podium-outline"></ion-icon>  Reportes
+                         Reportes
 
                     </a>
                     <div class="dropdown-menu" aria-labelledby="reportes">
@@ -20,12 +22,12 @@
                     </div>
                 </div>
             </li>
-            <li class="nav-link"><ion-icon name="timer-outline"></ion-icon></li>
-            <li>@Html.ActionLink("Historial", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+            <li class="nav-link" style="color:white;"><ion-icon name="timer-outline"></ion-icon></li>
+            <li>@Html.ActionLink("Historial", "Index", "Home", new { area = "" }, new { @class = "color nav-link" })</li>
         </ul>
 
         <ul class="navbar-nav navbar-right">
-                <li>
+                <li >
                     <div class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="usuario" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 @User.Identity.Name
