--- a/CNLCI/Views/Login/Login.cshtml
+++ b/CNLCI/Views/Login/Login.cshtml
@@ -2,17 +2,13 @@
 @{
     ViewBag.Title = "Login";
 }
-<main>
+<main style="padding:10%">
     <center>
-        <div class="login-container">
-            <div class="content">
+        <div class="login-container"  >
+            <div class="content" >
                 <img src="https://ww2.freelogovectors.net/wp-content/uploads/2023/01/conalep-logo-freelogovectors.net_.png" style="max-width: 100%; height: auto;">
-
-               
-                        <a class="button is-rounded button-link " href="@Url.Action("Index", "Home")">Iniciar sesión</a>
-                    
+                        <a class="button is-rounded button-link " href="@Url.Action("Index", "Home")">Iniciar sesión</a>                    
             </div>
         </div>
     </center>
 </main>
-
