--- a/CNLCI/Views/Shared/_Layout.cshtml
+++ b/CNLCI/Views/Shared/_Layout.cshtml
@@ -11,13 +11,22 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <link href="~/Style/desing.css" rel="stylesheet" />
 
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+
+  <style>
+      .lol {
+          color: white;
+          font-family: 'Century Gothic';
+          font-weight: bold;
+      }
+  </style>
     
 </head>
-<body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm is-success" >
+<body >
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm is-success" style="position: fixed; height:5%"  >
         <div class="container">
 
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Alternar navegación" aria-controls="navbarSupportedContent"
