--- a/CNLCI/Views/Shared/_LoginPartial.cshtml
+++ b/CNLCI/Views/Shared/_LoginPartial.cshtml
@@ -2,34 +2,34 @@
 {
     <text>
 
-        <ul class="navbar-nav flex-grow-1">
-            <li class="nav-link" style="color:white;"><ion-icon name="reader-outline"></ion-icon></li>
-            <li style="color:white;">@Html.ActionLink("Justificante", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+        <ul class="navbar-nav flex-grow-1 lol">
+            <li class="nav-link" style="color:white" ><ion-icon name="reader-outline"></ion-icon></li>
+            <li >@Html.ActionLink("Justificante", "Justificante", "Justificantes", new { area = "" }, new { @class = "nav-link lol" })</li>
             <li class="nav-link" style="color:white;"><ion-icon name="id-card-outline"></ion-icon></li>
-            <li style="color:white;">@Html.ActionLink("Pase de salida", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-            <li class="nav-link" style="color:white;"> <ion-icon name="podium-outline"></ion-icon></li>
-            <li>
+            <li >@Html.ActionLink("Pase de salida", "PaseDeSalida", "Justificantes", new { area = "" }, new { @class = "nav-link lol" })</li>
+            <li class="nav-link" style="color:white"> <ion-icon name="podium-outline"></ion-icon></li>
+            <li >
                 <div class="nav-item dropdown " style="position:relative">
-                    <a class="nav-link dropdown-toggle" href="#" id="reportes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a class="nav-link dropdown-toggle lol"  href="#" id="reportes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                          Reportes
 
                     </a>
-                    <div class="dropdown-menu" aria-labelledby="reportes">
-                        <a class="dropdown-item" href="@Url.Action("PorAlumno", "Home")"><ion-icon name="person-circle-outline"></ion-icon>  Reporte por alumno</a>
-                        <a class="dropdown-item" href="@Url.Action("PorGrupo", "Home")"><ion-icon name="people-circle-outline"></ion-icon>  Reporte por grupo</a>
-                        <a class="dropdown-item" href="@Url.Action("PorCarrera", "Home")"><ion-icon name="book-outline"></ion-icon>  Reporte por carrera</a>
-                        <a class="dropdown-item" href="@Url.Action("PorSemestre", "Home")"><ion-icon name="calendar-outline"></ion-icon>  Reporte por semestre</a>
+                    <div class="dropdown-menu " aria-labelledby="reportes">
+                        <a class="dropdown-item" href="@Url.Action("PorAlumno", "Reportes")" ><ion-icon name="person-circle-outline"></ion-icon>  Reporte por alumno</a>
+                        <a class="dropdown-item" href="@Url.Action("PorGrupo", "Reportes")"><ion-icon name="people-circle-outline"></ion-icon>  Reporte por grupo</a>
+                        <a class="dropdown-item" href="@Url.Action("PorCarrera", "Reportes")"><ion-icon name="book-outline"></ion-icon>  Reporte por carrera</a>
+                        <a class="dropdown-item" href="@Url.Action("PorSemestre", "Reportes")"><ion-icon name="calendar-outline"></ion-icon>  Reporte por semestre</a>
                     </div>
                 </div>
             </li>
             <li class="nav-link" style="color:white;"><ion-icon name="timer-outline"></ion-icon></li>
-            <li>@Html.ActionLink("Historial", "Index", "Home", new { area = "" }, new { @class = "color nav-link" })</li>
+            <li>@Html.ActionLink("Historial", "Index", "Home", new { area = "" }, new { @class = " nav-link lol" })</li>
         </ul>
 
-        <ul class="navbar-nav navbar-right">
+        <ul class="navbar-nav navbar-right lol">
                 <li >
                     <div class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="usuario" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle lol" href="#" id="usuario" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 @User.Identity.Name
 
                             </a>
@@ -41,3 +41,5 @@
         </ul>
     </text>
 }
+
+
