--- a/CNLCI/Views/Shared/_LoginPartial.cshtml
+++ b/CNLCI/Views/Shared/_LoginPartial.cshtml
@@ -11,7 +11,7 @@
             <li >
                 <div class="nav-item dropdown " style="position:relative">
                     <a class="nav-link dropdown-toggle lol"  href="#" id="reportes" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                         Reportes
+                         Reporte
 
                     </a>
                     <div class="dropdown-menu " aria-labelledby="reportes">
