--- a/CNLCI/Views/Justificantes/_Motivo.cshtml
+++ b/CNLCI/Views/Justificantes/_Motivo.cshtml
@@ -5,7 +5,7 @@
                 <div class="field">
                     <div class="control">
                         <div class="select" style=" width: 100%">
-                            <select name="motivo" id="motivo">
+                            <select name="Motivo" id="Motivo">
 
                                 <option value="" style="display: none;">Seleccionar motivo</option>
                                 <option value="ACTIVIDADES EXTRACURRICULARES">Actividades extracurriculares</option>
