--- a/CNLCI/Views/Justificantes/PaseDeSalida.cshtml
+++ b/CNLCI/Views/Justificantes/PaseDeSalida.cshtml
@@ -6,7 +6,7 @@
 <main>
 
     <div class="container Marco">
-        <div>
+        <div style="margin-bottom: 20px;">
             <center>
                 <h1 class="title">Nuevo pase de salida</h1>
             </center>
