--- a/CNLCI/Views/Justificantes/_AlumnoTutor.cshtml
+++ b/CNLCI/Views/Justificantes/_AlumnoTutor.cshtml
@@ -125,8 +125,8 @@
 
                                 <div class="control">
 
-                                    <div class="select" style=" width: 100%" id="parentezco" name="parentezco" disabled>
-                                        <select>
+                                    <div class="select" style=" width: 100%"  disabled>
+                                        <select id="parentezco" name="parentezco">
 
                                             <option value="" style="display: none;">Seleccionar parentezco </option>
                                             <option value="PADRE">Padre</option>
