--- a/CNLCI/Views/Justificantes/_AlumnoTutor.cshtml
+++ b/CNLCI/Views/Justificantes/_AlumnoTutor.cshtml
@@ -9,7 +9,7 @@
                     <div class="field">
 
                         <div class="control">
-                            <input class="input" type="text" placeholder="Nombre(s)" value="@datos.Nombre" readonly />
+                            <input class="input" type="text" placeholder="Nombre(s)" value="@datos.Nombre" readonly name="Nombre"/>
                         </div>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
                     <div class="field">
 
                         <div class="control">
-                            <input class="input" type="text" placeholder="Apellido paterno" value="@datos.Primer_apellido" readonly>
+                            <input class="input" type="text" placeholder="Apellido paterno" value="@datos.Primer_apellido" readonly name="Primer_apellido">
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
                     <div class="field">
 
                         <div class="control">
-                            <input class="input" type="text" placeholder="Apellido materno" value="@datos.Segundo_apellido" readonly>
+                            <input class="input" type="text" placeholder="Apellido materno" value="@datos.Segundo_apellido" readonly name="Segundo_apellido">
                         </div>
                     </div>
                 </div>
@@ -34,7 +34,7 @@
                 <div class="column is-one-quarter">
                     <div class="field">
                         <div class="control">
-                            <input class="input" type="text" placeholder="Matrícula" value="@datos.Matricula" readonly>
+                            <input class="input" type="text" placeholder="Matrícula" value="@datos.Matricula" readonly name="Matricula">
                         </div>
                     </div>
                 </div>
@@ -43,7 +43,7 @@
                     <div class="field">
                         <div class="control">
                             <div class="select" style=" width: 100%">
-                                <select>
+                                <select id="IDCARRERA" name="Carrera">
 
                                     <option value="" style="display: none;">Seleccionar carrera</option>
                                     <option value="ACTIVIDADES EXTRACURRICULARES">Actividades extracurriculares</option>
@@ -63,7 +63,7 @@
                         <div class="control">
 
                             <div class="select" style=" width: 100%">
-                                <select>
+                                <select id="IDGRUPO" name="Grupo">
 
                                     <option value="" style="display: none;">Seleccionar grupo </option>
                                     <option value="ACTIVIDADES EXTRACURRICULARES">Actividades extracurriculares</option>
@@ -82,6 +82,8 @@
     </div>
 
     @Html.Partial("_Motivo")
+    
+
     <div class="container">
         <div class="Marco">
             <div class="field is-horizontal">
@@ -94,7 +96,7 @@
                             <div class="control">
 
                                 <label class="radio">
-                                    <input type="radio" name="autorizo" value="unica" onclick="habilitarRegistrado()" checked>
+                                    <input type="radio" name="autorizo" value="Tutor" onclick="habilitarRegistrado()" checked>
                                     <b>Tutor</b>
 
 
@@ -104,7 +106,7 @@
 
                         <div class="field">
                             <div class="control">
-                                <input class="input" type="text" id="autorizo" name="autorizo" disabled placeholder="Nombre del tutor" value="@datos.Tutor_Nombre" />
+                                <input class="input" type="text" id="autorizo" name="TutorN" readonly placeholder="Nombre del tutor" value="@datos.Tutor_Nombre" />
                             </div>
                         </div>
                     </div>
@@ -113,7 +115,7 @@
                             <div class="control">
 
                                 <label class="radio">
-                                    <input type="radio" name="autorizo" value="extendida" onclick="habilitarOtro()">
+                                    <input type="radio" name="autorizo" value="externo" onclick="habilitarOtro()">
                                     <b>Externo</b>
                                 </label>
                             </div>
@@ -125,7 +127,7 @@
 
                                 <div class="control">
 
-                                    <div class="select" style=" width: 100%"  disabled>
+                                    <div class="select" style=" width: 100%" disabled>
                                         <select id="parentezco" name="parentezco">
 
                                             <option value="" style="display: none;">Seleccionar parentezco </option>
@@ -152,13 +154,26 @@
             </div>
         </div>
     </div>
-    <div class="field is-grouped is-grouped-centered">
-        <p class="control">
-            <button type="reset" class="button is-danger">Limpiar</button>
-        </p>
-        <p class="control">
-            <button type="submit" class="button is-primary">Generar</button>
-        </p>
+
+    <div class="container" style="text-align: left;">
+        <div class="Marco">
+            <div class="field is-horizontal">
+                <div class="field-label is-normal is-flex is-align-items-center">
+                    <label class="label">Seleccionar archivo</label>
+                </div>
+                <div class="field-body has-addons-centered">
+                    <div class="column">
+                        <div class="file is-primary has-name">
+                            <label class="file-label">
+                                <input type="file" name="archivo" id="archivo">
+
+
+                            </label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
 }
